# CICD-test

./: .gitignore  CMakeLists.txt  main.cpp
.cache/clangd/index/: main.cpp.2D63B56A58394C0E.idx
.github/workflows/: build.yml
